src/sass/main.sass
* 
    font-family: 'Roboto'
    
.page
    background-color: #edf3f3
.navbar
    background-color: #ffffff
    font-size: 15px
    line-height: 50px
    padding: 0
    &__list
        list-style-type: none
        margin: 0
    &__item
        transition: all 0.3s
        float: left
        text-decoration: none
        padding: 0 30px 
        border-right: 1px solid #eee
        color: #373737
        &:hover
            text-decoration: none
            color: #6da0f6
            background-color: #eeeeee

    &__logo
        border-right: 1px solid #eee
        float: left
        margin: 0 0 0 30px  
        padding-right: 30px

.search-form
    width: 50%
    float: right
    position: relative
    &__input
        width: 100%
        font-size: 16px
        padding-left: 43px
        background-color: #f5f7f6
        border: none
        line-height: 50px
        height: 50px
        outline: none
        box-shadow: none
        position: absolute
        right: 0
    
    &__button
        border: none
        width: 50px
        margin: 0
        padding: 0
        position: absolute
        left: -1px
        top: 2px
        background: transparent

.logo 
    font-size: 16px
    font-weight: bold

.img-placeholder
    height: 300px
    overflow: hidden

.card-list
    margin-top: 30px
    &__card
        margin-bottom: 30px


.card 
    text-align: center
    position: relative
    background-color: #ffffff
    box-shadow: 0px 0px 19px -6px rgba(0,0,0,0.44)
    &__background
        width: 100%
        height: 200px
        object-fit: cover
    &__username
        cursor: pointer
        position: absolute
        font-size: 20px
        color: #fff
        font-weight: bold
        line-height: 200px
        top: 0
        left: 0px
        width: 100%
        transition: all 0.12s
        &:hover
            text-decoration: none
            color: #ffffff
            font-size: 35px
        &:visited
            text-decoration: none
    &__desc
        height: 130px
        line-height: 130px
    &__lower-section
        background: #eeeeee
        padding: 5px 0

    &__likes::after
        content: '❤️'
        margin-left: 6px
    &__visits::after
        content: '🕵️‍♂️'
        margin-left: 6px
        

.right-sidebar
    padding: 30px 20px
    margin-top: 30px
    position: sticky
    top: 30px
    
    &__header
        font-size: 22px
        font-weight: bold

